--- a/_config.yml
+++ b/_config.yml
@@ -38,11 +38,11 @@ social:
   email: longphan@ieee.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/ # change to your GitHub homepage
+    # - https://twitter.com/username # change to your Twitter homepage
+    - https://github.com/longpxt # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    https://www.linkedin.com/in/longphanxuan/
+    # - https://www.linkedin.com/in/longphanxuan/
 
 # Site Verification Settings
 webmaster_verifications:
