--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "longpxt.github.io"
+url: "https://longpxt.github.io"
 
 github:
-  username: longpxtlongpxt longpxt # change to your GitHub 
+  username: longpxt # change to your GitHub 
 
 twitter:
   username: twitter_username # change to your Twitter username
